--- a/style.css
+++ b/style.css
@@ -1,12 +1,8 @@
 /*!
 --------------------------------------------------------------------------------------------------------------------------------
- !!!!!ATTENTION!!!!!!!!!!!!!!!!!!!!!!!THE FOLLOWING CODE HAS BEEN MODIFIED FROM THE ONLINE TEMPLATE AVAILABLE UNDER: 
- * Bootstrap v3.3.7 (http://getbootstrap.com)
- * Copyright 2011-2016 Twitter, Inc.
- * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
- */
-/*! normalize.css v3.0.3 | MIT License | github.com/necolas/normalize.css */
-
+                                              Style sheet following Mohaimen's portfolio
+--------------------------------------------------------------------------------------------------------------------------------
+*/
 
 
 
@@ -141,7 +137,7 @@ button{
   font-weight: bold;
   display: block;
   padding: 9.5px;
-  margin: 25em 70em 10px;
+  margin: 20em 70em 10px;
   text-align: center;
   font-size: 15px;
   line-height: 5;
@@ -188,15 +184,137 @@ button{
     background-color: rgba(200, 200, 200, .3);
 }
 
+.middleBlock{
+  text-align: center;
+  display: block;
+  padding: 9.5px;
+  margin: 0em 20em 10px;
+  font-size: 19px;
+  line-height: 2;
+  color: #333;
+  word-break: break-all;
+  word-wrap: break-word;
+  background-color: rgba(200, 200, 200, .7);
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  width: 35%;
+
+}
 
 
 input[type="text"]{
   text-align: center;
-  border: solid grey;
+  border: dotted white;
   width: 60%;
   background-color: rgba(0, 0, 0, 0.5);
   line-height: 3;
   margin: 6em 6.5em 0em;
   font-size: 40px;
   color: white;
+}
+
+input[type="submit"]
+{
+  overflow: visible;
+  text-transform: none;
+  -webkit-appearance: button;
+  cursor: pointer;
+  font-family: inherit;
+  font-size: inherit;
+  line-height: inherit;
+  padding: 20px;
+}
+
+.schoolProjects{
+  text-align: center;
+  display: block;
+  padding: 9.5px;
+  margin: 5em 0em 10px;
+  font-size: 30px;
+  line-height: 5;
+  color: #333;
+  word-break: break-all;
+  word-wrap: break-word;
+  background-color: rgba(0, 0, 0, .3);
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  width: 35%;
+
+}
+
+.schoolProjects:hover,
+.schoolProjects:focus{
+  cursor: pointer;
+  color: white;
+  background-color: rgba(0, 0, 0, .7);
+}
+
+.personalProjects{
+  text-align: center;
+  display: block;
+  padding: 9.5px;
+  margin: -6em 25em 10px;
+  font-size: 30px;
+  line-height: 5;
+  color: #333;
+  word-break: break-all;
+  word-wrap: break-word;
+  background-color: rgba(0, 0, 0, .3);
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  width: 35%;
+}
+
+.personalProjects:hover,
+.personalProjects:focus{
+  cursor: pointer;
+  background-color: rgba(0, 0, 0, .7);
+  color: white;
+}
+
+.workProjects{
+  text-align: center;
+  display: block;
+  padding: 9.5px;
+  margin: 4em 0em 10px;
+  font-size: 30px;
+  line-height: 5;
+  color: #333;
+  word-break: break-all;
+  word-wrap: break-word;
+  background-color: rgba(0, 0, 0, .3);
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  width: 35%;
+
+}
+
+.workProjects:hover,
+.workProjects:focus{
+  background-color: rgba(0, 0, 0, .7);
+  cursor: pointer;
+  color: white;
+}
+
+.hackathons{
+  text-align: center;
+  display: block;
+  padding: 9.5px;
+  margin: -6em 25em 10px;
+  font-size: 30px;
+  line-height: 5;
+  color: #333;
+  word-break: break-all;
+  word-wrap: break-word;
+  background-color: rgba(0, 0, 0, .3);
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  width: 35%;
+}
+
+.hackathons:hover,
+.hackathons:focus{
+  cursor: pointer;
+  color: white;
+  background-color: rgba(0, 0, 0, .7);
 }
